language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/borrow_global_acquires_invalid_3.exp
error[E07003]: invalid operation, could create dangling a reference
  ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/borrow_global_acquires_invalid_3.move:9:9
  │
8 │         let y = get_v(x);
  │                 -------- It is still being mutably borrowed by this reference
9 │         acquires_t1(account);
  │         ^^^^^^^^^^^^^^^^^^^^ Invalid acquiring of resource 'T1'

error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/borrow_global_acquires_invalid_3.move:18:9
   │
16 │         let y = get_v(x);
   │                 -------- It is still being mutably borrowed by this reference
17 │         acquires_t2(account);
18 │         acquires_t1(account);
   │         ^^^^^^^^^^^^^^^^^^^^ Invalid acquiring of resource 'T1'

error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/borrow_global_acquires_invalid_3.move:25:9
   │
24 │         let y = get_v(x);
   │                 -------- It is still being mutably borrowed by this reference
25 │         acquires_t1(account);
   │         ^^^^^^^^^^^^^^^^^^^^ Invalid acquiring of resource 'T1'

